# TPLab2

./: .gitignore  CMakeLists.txt  main.cpp
Task1/: CMakeLists.txt
Task1/Sorted_collection/: CMakeLists.txt  Comparer.h  Order.h  SortedList.h  mathSorting.cpp  mathSorting.h
Task1/lib/: Route.cpp  Route.h  RouteMap.cpp  RouteMap.h
Task2/: CMakeLists.txt  Function.cpp  Function.h  MyInput.txt
